force-app/main/default/objects/Code__c/Code__c.object-meta.xml
<CustomObject>
    <label>Code</label>
    <nameField>
        <label>Code Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Codes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>