force-app/main/default/objects/Code__c/fields/Solicit_Code__c.field-meta.xml
<CustomField>
    <fullName>Solicit_Code__c</fullName>
    <label>Solicit Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Do Not Solicit</fullName>
            </value>
            <value>
                <fullName>No Email Appeals</fullName>
            </value>
            <value>
                <fullName>No Further Contact</fullName>
            </value>
            <value>
                <fullName>No Invitation Mailings</fullName>
            </value>
            <value>
                <fullName>No Mail Appeals</fullName>
            </value>
            <value>
                <fullName>Do Not Mail - Constituent Request</fullName>
            </value>
            <value>
                <fullName>No Telephone Appeals</fullName>
            </value>
            <value>
                <fullName>One Mailer Per Year</fullName>
            </value>
            <value>
                <fullName>Newsletter</fullName>
            </value>
            <value>
                <fullName>No Recognition</fullName>
            </value>
            <value>
                <fullName>No Planned Giving Communication</fullName>
            </value>
            <value>
                <fullName>CP Newsletter</fullName>
            </value>
            <value>
                <fullName>DNC w/o checking w/ Mark Whitley first</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>