force-app/main/default/objects/Code__c/fields/Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Sub_Type__c</fullName>
    <label>Sub-Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CCS Top 350</fullName>
            </value>
            <value>
                <fullName>Camp</fullName>
            </value>
            <value>
                <fullName>Estate/Trust</fullName>
            </value>
            <value>
                <fullName>Organization</fullName>
            </value>
            <value>
                <fullName>Easter Seals Staff</fullName>
            </value>
            <value>
                <fullName>Planned Giving Prospect</fullName>
            </value>
            <value>
                <fullName>Donor Advised Fund</fullName>
            </value>
            <value>
                <fullName>Foundation</fullName>
            </value>
            <value>
                <fullName>Southern CA - Current Board Member</fullName>
            </value>
            <value>
                <fullName>Friend</fullName>
            </value>
            <value>
                <fullName>Top 20 Prospect</fullName>
            </value>
            <value>
                <fullName>Legacy Society Member Active</fullName>
            </value>
            <value>
                <fullName>Government</fullName>
            </value>
            <value>
                <fullName>Corporate Foundation</fullName>
            </value>
            <value>
                <fullName>Southern CA - Alumni Board Member</fullName>
            </value>
            <value>
                <fullName>National Board Member</fullName>
            </value>
            <value>
                <fullName>Participant Family</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>